syntax = "proto3";

package transaction;

service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns(Transaction){}
  rpc DailyReport(DailyReportRequest) returns(DailyRequestResponse){}
}

message DailyRequestResponse {
  int32 count=1;
}

message DailyReportRequest {
}

message CreateTransactionRequest {
  int32 user = 1;
  int32 amount = 2;
}

message Transaction {
  string id = 1;
  int32 user = 2;
  int32 amount = 3;
}